
Vernacular Commands

- Removed deprecated commands Arguments Scope and Implicit Arguments
  (not the option). Use the Arguments command instead.
- Nested proofs may be enabled through the option `Nested Proofs Allowed`.
  By default, they are disabled and produce an error. The deprecation
  warning which used to occur when using nested proofs has been removed.

Coq binaries and process model

- Before 8.9, Coq distributed a single `coqtop` binary and a set of
  dynamically loadable plugins that used to take over the main loop
  for tasks such as IDE language server or parallel proof checking.

  These plugins have been turned into full-fledged binaries so each
  different process has associated a particular binary now, in
  particular `coqidetop` is the CoqIDE language server, and
  `coq{proof,tactic,query}worker` are in charge of task-specific and
  parallel proof checking.

SSReflect

- The implementation of delayed clear switches in intro patterns
  is now simpler to explain:
  1. The immediate effect of a clear switch like {x} is to rename the
     variable x to _x_ (i.e. a reserved identifier that cannot be mentioned
     explicitly)
  2. The delayed effect of {x} is that _x_ is cleared at the end of the intro
     pattern
  3. A clear switch immediately before a view application like {x}/v is
     translated to /v{x}.
  In particular rule 3 lets one write {x}/v even if v uses the variable x:
  indeed the view is executed before the renaming.

- An empty clear switch is now accepted in intro patterns before a 
  view application whenever the view is a variable.
  One can now write {}/v to mean {v}/v.  Remark that {}/x is very similar
  to the idiom {}e for the rewrite tactic (the equation e is used for
  rewriting and then discarded).

Changes from 8.8.0 to 8.8.1
===========================

Kernel

- Fix a critical bug with cofixpoints and vm_compute/native_compute (#7333).
- Fix a critical bug with modules and algebraic universes (#7695)