@@ -210,7 +210,10 @@ open Pputils
         | HintsTransparency (l, b) ->
           keyword (if b then "Transparent" else "Opaque")
           ++ spc ()
-          ++ prlist_with_sep sep pr_qualid l
+          ++ (match l with
+              | HintsVariables -> keyword "Variables"
+              | HintsConstants -> keyword "Constants"
+              | HintsReferences l -> prlist_with_sep sep pr_qualid l)
         | HintsMode (m, l) ->
           keyword "Mode"
           ++ spc ()
